# gstreamer-ultimate-plugin

./: CMakeLists.txt
example1/: CMakeLists.txt  example1.c
