cmake_minimum_required(VERSION 2.4)
project(gstreamer-work)
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake") 
LIST(APPEND CMAKE_MODULE_PATH "/usr/share/apps/cmake/modules/")
message(INFO "${CMAKE_MODULE_PATH}")
find_package(GStreamer 0.10 REQUIRED)
include_directories(${GSTREAMER_INCLUDE_DIRS} ${GSTREAMER_BASE_INCLUDE_DIRS})
find_package(Glib REQUIRED)
include_directories(${Glib_INCLUDE_DIRS})
find_package(LibXml2 REQUIRED)
include_directories(${LIBXML2_INCLUDE_DIR})
find_package(GObject REQUIRED)
add_definitions(${GOBJECT_DEFINITIONS})
include_directories(${GOBJECT_INCLUDE_DIRS})

message(INFO "Glib: ${Glib_INCLUDE_DIRS}")
message(INFO "GSTREAMER: ${GSTREAMER_INCLUDE_DIRS}")
message(INFO "xml: ${LIBXML2_INCLUDE_DIR}")

add_subdirectory(example1)
